mysql/mysql.yml

---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: bitwarden-mysql
  labels:
    app: bitwarden
spec:
  sessionAffinity: None
  type: ClusterIP
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: bitwarden
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations: {}
  name: bitwarden-mysql
  labels:
    app: bitwarden
spec:
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 25Gi
  serviceName: bitwarden-mysql-cluster
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  revisionHistoryLimit: 10
  replicas: 1
  selector:
    matchLabels:
      app: bitwarden
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      containers:
        - name: mysql
          securityContext:
            runAsUser: 999
          resources:
            requests:
              cpu: "500m"
              memory: 1Gi
          image: mysql:5.7
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: mysql-config
              mountPath: /etc/mysql/my.cnf
              subPath: my.cnf
            - name: data
              mountPath: /var/lib/mysql
      securityContext: {}
      terminationGracePeriodSeconds: 120
      dnsPolicy: ClusterFirst
      volumes:
        - name: mysql-config
          configMap:
            defaultMode: 420
            name: bitwarden-mysql-config
